# sampling

./: .gitignore  CMakeLists.txt  conditionalPoisson.cpp  conditionalPoisson.h  pareto.cpp  pareto.h  sampford.h  sampfordBruteForce.cpp  sampfordConditionalPoissonRejective.cpp  sampfordFromParetoNaive.cpp  semiDeterministicSampling.h
RPackage/: CMakeLists.txt  DESCRIPTION  NAMESPACE
RPackage/R/: conditionalPoissonInclusion.R  conditionalPoissonSecondInclusion.R  onLoad.R  setDefaultPrec.R
RPackage/src/: CMakeLists.txt
RPackage/src/sampling/: CMakeLists.txt  conditionalPoissonInclusion.cpp  conditionalPoissonInclusion.h  conditionalPoissonSecondInclusion.cpp  conditionalPoissonSecondInclusion.h  register.cpp  setDefaultPrec.cpp  setDefaultPrec.h
copyBinary/: CMakeLists.txt
copyText/: CMakeLists.txt
sampling/: CMakeLists.txt  conditionalPoisson.cpp  conditionalPoisson.h  conditionalPoissonBase.cpp  conditionalPoissonBase.h  conditionalPoissonDrafting.cpp  conditionalPoissonDrafting.h  conditionalPoissonRejective.cpp  conditionalPoissonRejective.h  conditionalPoissonSequential.cpp  conditionalPoissonSequential.h  fearnheadGetKappa.cpp  fearnheadGetKappa.h  fearnheadSampling.cpp  fearnheadSampling.h  includeMPFRSampling.h  pareto.cpp  pareto.h  paretoDoublePrecision.cpp  paretoDoublePrecision.h  sampford.h  sampfordBruteForce.cpp  sampfordConditionalPoissonRejective.cpp  sampfordDoublePrecision.cpp  sampfordDoublePrecision.h  sampfordFromParetoNaive.cpp  sampfordMultinomialRejective.cpp  samplingBase.cpp  samplingBase.h  samplingBaseDoublePrecision.cpp  samplingBaseDoublePrecision.h  semiDeterministicSampling.cpp  systematicSampling.cpp  systematicSampling.h
samplingTests/: CMakeLists.txt  conditionalPoissonDeterministic.cpp  conditionalPoissonDrafting.cpp  conditionalPoissonSequential.cpp  conditionalPoissonSimple.cpp  conditionalPoissonZeroWeights.cpp  conditionalPoissonZeroWeightsAndDeterministic.cpp  main.cpp  paretoDeterministic.cpp  paretoSimple.cpp  paretoZeroWeights.cpp
