cmake_minimum_required(VERSION 3.1)
project(sampling)
set(Boost_USE_STATIC_LIBS	OFF)
set(Boost_USE_MULTITHREADED	ON)
set(Boost_USE_STATIC_RUNTIME	OFF)
find_package(Boost 1.53.0 COMPONENTS random unit_test_framework REQUIRED)
if(CMAKE_COMPILER_IS_GNUCC)
	add_definitions("-Wall")
endif()
add_subdirectory(sampling)
add_subdirectory(samplingTests)
export(TARGETS sampling FILE samplingConfig.cmake)
